# CPD-ISP

./: .gitignore  calibration.npz  main.py  pyproject.toml
src/: cnc_capture.py  cnc_probe.py  list_cams.py
src/cpd-isp/: __init__.py  image.py  stitcher.py
src/cpd_eval/: __init__.py  eval.py
src/cpd_isp/: __init__.py  dxf_generator.py  image.py  raw_image.py  stitcher.py
src/cpd_scan/: __init__.py  sender.py
tests/: test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py
tests/input_images_2/: IMG_1366.HEIC  IMG_1367.HEIC  IMG_1368.HEIC  IMG_1369.HEIC  IMG_1370.HEIC  IMG_1371.HEIC  IMG_1372.HEIC  IMG_1373.HEIC
