[project]
name = "cpd-isp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.6",
    "opencv-python>=4.13.0.90",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpd_isp"]  # Tell it where your package is

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
